# elaborate-bhnr

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/bhnr_rl/: enjoy.py  ppo.py  try_ppo.py
src/bhnr_rl/specs/: __init__.py  quadrotor_position_control.py  register.py
src/bhnr_rl/tl/: monitor.py  tl_ppo.py
src/drone_gym/envs/vrep/quadrotor/: position_control_env.py
src/temporal_logic/signal_tl/: __init__.py
src/temporal_logic/signal_tl/core/: base.py  basic_ops.py  temporal_ops.py
src/temporal_logic/signal_tl/monitors/: efficient_robustness.py  lti_semantics.py
