[tool.poetry]
name = "bhnr-rl"
version = "0.1.0"
description = ""
authors = ["Anand Balakrishnan <anandbala1597@gmail.com>"]

include = [
    "src/drone_gym/envs/vrep/assets/**"
]


[tool.poetry.dependencies]
python = "^3.6"
stable-baselines = "^2.4"
#temporal-logic = {git = "https://github.com/anand-bala/tl-py.git"}

sympy = "^1.3"
pandas = "^0.24.1"
numpy = "^1.16"
scipy = "^1.2"
gym = "^0.12.0"
msgpack = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
