[metadata]
name = bhnr-rl
version = 0.1.0
description = Bounded Horizon Nominal Rewarding experiments
author = Anand Balakrishnan
author_email = anandbal@usc.edu
url = https://bitbucket.org/anand-b/bhnr-rl

[options]
python_requires = ~=3.3
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    torch ~= 1.0
    gym ~= 0.12
    box2d-py ~= 2.3.5
    pandas ~= 0.24.1
    numpy ~= 1.16
    stable-baselines ~= 2.4.0
    msgpack ~= 0.6.1
    matplotlib ~= 3.0
    sympy ~= 1.3

[options.packages.find]
where=src

[options.package_data]
drone_gym = "envs/vrep/assets/**"


